@@ -19,4 +19,11 @@ package com.badlogic.gdx.backends.iosrobovm;
 import com.badlogic.gdx.Audio;
 
 public interface IOSAudio extends Audio {
+	public void didBecomeActive ();
+
+	public void willEnterForeground ();
+
+	public void willResignActive ();
+
+	public void willTerminate ();
 }
